--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-slider": "^1.1.2",
+    "@stripe/stripe-js": "^2.1.2",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/auth-ui-react": "^0.4.4",
     "@supabase/auth-ui-shared": "^0.1.6",
+    "@supabase/supabase-js": "^2.33.2",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -29,6 +31,7 @@
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
     "stripe": "^13.4.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
